<resources>
<string name="app_name">Lab2</string>
<string name="hello_message">Hello World!</string>
<string name="ButtonText">I\'m a button</string>
<string name="MyWidgets">Here are my widgets:</string>
<string name="Button">BUTTON</string>
<string name="CheckBox">Check this out!</string>
<string name="Switch">Switch on / off</string>
<string name="EditText">Type your answer in here</string>
</resources>

