<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyWidgets"
        android:textSize="40dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/Button"
            android:textAlignment="center"

            android:layout_weight="1"
            android:gravity="fill"
            />
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/flag"

            android:layout_weight="1"
            android:gravity="fill"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CheckBox"

            android:layout_weight="1"
            android:gravity="fill"
            />
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Switch"

            android:layout_weight="1"
            android:gravity="fill"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/EditText"/>
</LinearLayout>