<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="4"
    android:columnCount="2"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/MyWidgets"
        android:textSize="40dp"

        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_row="1"
        android:layout_column="0"

        android:layout_weight="1"
        android:gravity="fill"

        android:text="@string/Button"
        android:textAlignment="center"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"

        android:layout_row="1"
        android:layout_column="1"

        android:layout_weight="1"
        android:gravity="fill"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_row="2"
        android:layout_column="0"

        android:layout_weight="1"
        android:gravity="fill"

        android:text="@string/CheckBox" />

    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_row="2"
        android:layout_column="1"

        android:layout_weight="1"
        android:gravity="fill"

        android:text="@string/Switch" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPersonName"
        android:hint="@string/EditText"

        android:layout_weight="1"
        android:gravity="fill"

        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        />

</GridLayout>